naval cap rework # 1

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -970,7 +970,7 @@
 
 
 		civic_tec_regular_researchers_illicit:0 "§P£tec_civic_job£§!Illicit Innovation" 
-		civic_tec_regular_researchers_illicit_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nPraxis and morale should not be barriers for development, and as such the majority of the conducted research on this society is done via more than questionable methods; abductions, collateral effects or tests on the population itself are the norm and generally oversighted by authorities, as technological progress advances relentlessly."
+		civic_tec_regular_researchers_illicit_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nPraxis and morale should not be barriers for development, and as such the majority of the conducted research on this society is done via more than questionable methods; abductions, collateral effects or tests on the population itself are the norm and generally overlooked by authorities, as technological progress advances relentlessly."
 		civic_tec_regular_researchers_illicit_tooltip:0 "§HUnlocks Feature:§! £building£ §Y$building_tec_illicit_lab_1_plural$§!\n£building£ §Y$building_tec_illicit_lab_1_plural$§! replace £building£ §Y$building_research_lab_plural$§!\n\n§HReplaces Job:§! £job_researcher£ §Y$job_researcher_plural$§! with £job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§!\n£job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§ use §Y$PLANET_CRIME_TITLE$§! instead of §Y$tec_loc_cg$§!, and produce more $tec_loc_research$ the higher the $PLANET_CRIME_TITLE$ on the planet.\n\n§HUnlocks Feature:§! £building£ §Y$building_tec_experimentation_lair$§!\n\nOn planets with a £building£ §Y$building_tec_experimentation_lair$§! several experiments will take place, making £job_tec_unwilling_subject£ §Y$job_tec_unwilling_subject_plural$§!, obtained of the population, to §Yproduce§! or §Ysuffer§! several outcomes based on the £system£ §HEmpire decisions§! through the game."
 
 			civic_tec_corporate_researchers_illicit:0 "§P£tec_civic_job£§!Illicit Experimentation" 
@@ -1794,7 +1794,7 @@
 
 	civic_tec_ai_defense: "A"
 	civic_tec_ai_defense_desc:0 "A.\n\n"
-	civic_tec_ai_defense_tooltip:0 "£job_tec_operator£ §YOperators§! will spawn §G4§! £job_soldier£ §YDefense Armies§! and generate §G5§! £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!.\n£job_roboticist£ Robotic pops working as £job_soldier£ Soldier or £job_tec_cadet£ Naval jobs will generate §G+1§! £stability£ §YStability§!, and the cost of activating §GNaval Overload§! is a §G25%§! cheaper.\n\n"
+	civic_tec_ai_defense_tooltip:0 "£job_tec_operator£ §YOperators§! will spawn §G4§! £job_soldier£ §YDefense Armies§! and generate §G5§! £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!.\n£job_roboticist£ Robotic pops working as £job_soldier£ Soldier or £job_tec_naval_operator£ Naval jobs will generate §G+1§! £stability£ §YStability§!, and the cost of activating §GNaval Overload§! is a §G25%§! cheaper.\n\n"
 
  # Special building or replace bastion with control relay (?) - remote cheap armies
 	civic_tec_ai_remote_warriors: "A"
