--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -172,6 +172,8 @@
 	tec_sbd_production:0 "Resource Production"
 	tec_sbd_research:0 "Tech-Station"
 
+	sm_naval_logistics_office_desc_modifier:2 "Anchorages: §G+2.5%§! extra $tec_loc_navalcap_from_jobs$"
+
 # DECISIONS replaces
 # ------------------------------------------------------------
 	decision_arcology_project_requirements:0 "£trigger_no£ §RAll district slots on the planet must be filled with§! £district£ §YHousing Districts§!, §Y$district_industrial_plural$§! or at least 3 fully upgraded £building£ §Y$building_tec_megacity_plural$§!."
