--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -243,7 +243,7 @@ tec_jump_empty:0 "\n\n"
  job_commandante:0 "Commander"
  job_commandante_plural:0 "Commanders"
  job_commandante_desc:0 "An experienced military chief, either active or honorably discharged."
- job_commandante_effect_desc:0 "£job_commandante£ $job_commandante_plural$ increase Empire's £mod_country_naval_cap_add£ §YNaval Capacity§!, spawn £defense_army£ §YDefense Armies§!, increase £stability£ §YStability§!, produces §Y$tec_loc_unity$§! and a small amount of £amenities£ §YAmenities§!."
+ job_commandante_effect_desc:0 "£job_commandante£ $job_commandante_plural$ increase $tec_loc_navalcap_from_jobs$, spawn §Y$tec_loc_defense_armies$§!, increase §Y$tec_loc_stability$§!, produces §Y$tec_loc_unity$§! and a small amount of §Y$tec_loc_amenities$§!."
  mod_job_commandante_add:0 "$job_commandante$ Jobs"
  mod_job_commandante_per_pop:0 "§G+1§! $job_commandante$ Job per $VALUE$ Pops"
  mod_job_commandante_pop_short:0 "\n§G+1§! £mod_job_commandante_add£ per $VALUE$ £pop£"
@@ -1630,79 +1630,84 @@ job_tec_master_roboticist_effect_t3_desc:0 "\nAfter the upgrade, £job_tec_robot
  tec_building_add_army_jobs_housing_2:0 "Provides §G1§! £mod_country_naval_cap_add£ Army Jobs for £district£ §YHousing Districts§! and £building£ §YArmy Buildings§!.\n\n"
 
 # ------------------------------------------------- Naval / Armies
- building_tec_bastion:0 "Bastion"
- building_tec_bastion_desc:0 "A massive and advanced fortress complex with expanded garrison and training facilities for soldiers, and a solid stockpile of military warfare and defensive measures."
+	building_tec_bastion:0 "Bastion"
+	building_tec_bastion_desc:0 "A massive and advanced fortress complex with expanded garrison and training facilities for soldiers, and a solid stockpile of military warfare and defensive measures."
 
- building_tec_naval_academy:0 "Naval Academy"
- building_tec_naval_academy_desc:0 "A highly specialized military installation where armada naval trainees learn the basics for controlling a fleet, and naval operations are coordinated with the whole empire efforts."
- building_tec_naval_academy_2:0 "Naval Coordination"
- building_tec_naval_academy_2_desc:0 "Planetary specialized military installations where armada naval trainees learn the basics for controlling a fleet, and naval operations are coordinated with the whole empire efforts."
- building_tec_naval_gestalt:0 "Naval Node"
- building_tec_naval_gestalt_desc:0 "A highly specialized installation where drones remotely commands or direct controll ships and fleets, and naval operations are coordinated with the whole collective efforts."
- building_tec_naval_gestalt_2:0 "Naval Relay"
- building_tec_naval_gestalt_2_desc:0 "Planetary specialized installation where drones remotely commands or direct controll ships and fleets, and naval operations are coordinated with the whole collective efforts."
+	building_tec_naval_academy:0 "Naval Command Post"
+	building_tec_naval_academy_desc:0 "A highly specialized military installation where armada naval trainees learn the basics for controlling a fleet, and naval operations are coordinated with the whole empire efforts."
+	building_tec_naval_academy_2:0 "Naval Command Center"
+	building_tec_naval_academy_2_desc:0 "Planetary specialized military installations where armada naval trainees learn the basics for controlling a fleet, and naval operations are coordinated with the whole empire efforts."
+	building_tec_naval_academy_3:0 "Naval Command Center"
+	building_tec_naval_academy_3_desc:0 "Planetary specialized military installations where armada naval trainees learn the basics for controlling a fleet, and naval operations are coordinated with the whole empire efforts."
 
- job_tec_cadet:0 "Naval Cadet"
- job_tec_cadet_plural:0 "Naval Cadets"
- job_tec_cadet_desc:0 "Various Corps of specialized and high-ranking soldiers serving the empire navy, doing daily training tasks and ensuring a perfect operational status on mothballed and ready fleet assets."
- job_tec_cadet_effect_desc:0 "£job_tec_cadet£ $job_tec_cadet_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! and spawn £defense_army£ §YDefense Armies§!."
- mod_job_tec_cadet_add:0 "$job_tec_cadet$ Jobs"
+	building_tec_naval_gestalt:0 "Naval Control Node"
+	building_tec_naval_gestalt_desc:0 "A highly specialized installation where drones remotely commands or direct controll ships and fleets, and naval operations are coordinated with the whole collective efforts."
+	building_tec_naval_gestalt_2:0 "Naval Control Relay"
+	building_tec_naval_gestalt_2_desc:0 "Planetary specialized installation where drones remotely commands or direct controll ships and fleets, and naval operations are coordinated with the whole collective efforts."
+	building_tec_naval_gestalt_3:0 "Naval Control Nexus"
+	building_tec_naval_gestalt_3_desc:0 "Planetary specialized installation where drones remotely commands or direct controll ships and fleets, and naval operations are coordinated with the whole collective efforts."
 
- job_tec_cadet_drone:0 "Naval Drone"
- job_tec_cadet_drone_plural:0 "Naval Drones"
- job_tec_cadet_drone_desc:0 "Highly specialized drones with the only task of serving as powerfun naval operators and relays for other subdrones, both at a planetary scale and during fleet movements, greatly boosting gestalt naval operations."
- job_tec_cadet_drone_effect_desc:0 "£job_tec_cadet_drone£ $job_tec_cadet_drone_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! and spawn £defense_army£ §YDefense Armies§!."
- mod_job_tec_cadet_drone_add:0 "$job_tec_cadet_drone$ Jobs"
+	job_tec_naval_operator:0 "Naval Operator"
+	job_tec_naval_operator_plural:0 "$job_tec_naval_operator$s"
+	job_tec_naval_operator_desc:0 "Various Corps of specialized and high-ranking soldiers serving the empire navy, doing daily training tasks and ensuring a perfect operational status on mothballed and ready fleet assets."
+	job_tec_naval_operator_effect_desc:0 "£job_tec_naval_operator£ $job_tec_naval_operator_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! and spawn £defense_army£ §YDefense Armies§!."
+	mod_job_tec_naval_operator_add:0 "$job_tec_naval_operator$ Jobs"
 
- job_tec_shipyard_technician:0 "Shipyard Technician"
- job_tec_shipyard_technician_plural:0 "Shipyard Technician"
- job_tec_shipyard_technician_desc:0 "While most naval technicians stay near the starbases on habitation modules, these skillful individuals pre-construct certain pieces that agilizes the process of ship making, parts repairing and component substitutions."
- job_tec_shipyard_technician_effect_desc:0 "£job_tec_shipyard_technician£ $job_tec_shipyard_technician_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, slighly increase §YEmpire Shipyard build speed§! and spawn £defense_army£ §YDefense Armies§!."
- mod_job_tec_shipyard_technician_add:0 "$job_tec_shipyard_technician$ Jobs"
- mod_job_tec_shipyard_technician_per_pop:0 "§G+1§! $job_tec_shipyard_technician$ Job Per $VALUE$ Pops"
- mod_job_tec_shipyard_techniciant_per_pop_short:0 "\n§G+1§! £job_tec_shipyard_technician_add£ per $VALUE$ £pop£"
+	job_tec_naval_operator_drone:0 "Naval Drone"
+	job_tec_naval_operator_drone_plural:0 "Naval Drones"
+	job_tec_naval_operator_drone_desc:0 "Highly specialized drones with the only task of serving as powerful naval operators and relays for other subdrones, both at a planetary scale and during fleet movements, greatly boosting gestalt naval operations."
+	job_tec_naval_operator_drone_effect_desc:0 "£job_tec_naval_operator_drone£ $job_tec_naval_operator_drone_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! and spawn £defense_army£ §YDefense Armies§!."
+	mod_job_tec_naval_operator_drone_add:0 "$job_tec_naval_operator_drone$ Jobs"
 
- job_tec_shipyard_engineer:0 "Shipyard Engineer"
- job_tec_shipyard_engineer_plural:0 "Shipyard Engineers"
- job_tec_shipyard_engineer_desc:0 "Very specialized researchers dedicated to design, create and improve new ship and part designs to improve the efficiency of the naval assets of the empire."
- job_tec_shipyard_engineer_effect_desc:0 "£job_tec_shipyard_engineer£ $job_tec_shipyard_engineer_plural$ uses $tec_loc_alloys$ to generate £engineering£ §YResearch§! and increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
- mod_job_tec_shipyard_engineer_add:0 "$job_tec_shipyard_engineer$ Jobs"
- mod_job_tec_shipyard_engineer_per_pop:0 "§G+1§! $job_tec_shipyard_engineer$ Job Per $VALUE$ Pops"
- mod_job_tec_shipyard_engineer_per_pop_short:0 "\n§G+1§! £job_tec_shipyard_engineer_add£ per $VALUE$ £pop£"
+	job_tec_shipyard_technician:0 "Shipyard Technician"
+	job_tec_shipyard_technician_plural:0 "Shipyard Technician"
+	job_tec_shipyard_technician_desc:0 "While most naval technicians stay near the starbases on habitation modules, these skillful individuals pre-construct certain pieces that agilizes the process of ship making, parts repairing and component substitutions."
+	job_tec_shipyard_technician_effect_desc:0 "£job_tec_shipyard_technician£ $job_tec_shipyard_technician_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, slighly increase §YEmpire Shipyard build speed§! and spawn £defense_army£ §YDefense Armies§!."
+	mod_job_tec_shipyard_technician_add:0 "$job_tec_shipyard_technician$ Jobs"
+	mod_job_tec_shipyard_technician_per_pop:0 "§G+1§! $job_tec_shipyard_technician$ Job Per $VALUE$ Pops"
+	mod_job_tec_shipyard_techniciant_per_pop_short:0 "\n§G+1§! £job_tec_shipyard_technician_add£ per $VALUE$ £pop£"
 
- job_tec_shipyard_technician_drone:0 "Shipyard Drone"
- job_tec_shipyard_technician_drone_plural:0 "Shipyard Drones"
- job_tec_shipyard_technician_drone_desc:0 "The specially dedicated drones are tasked to maintain and create sophisticated pieces of ships and habitation modules, boosting the local and total process of ship making, parts repairing and component substitutions."
- job_tec_shipyard_technician_drone_effect_desc:0 "£job_tec_shipyard_technician_drone£ $job_tec_shipyard_technician_drone_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, slighly increase §YEmpire Shipyard build speed§! and spawn £defense_army£ §YDefense Armies§!."
- mod_job_tec_shipyard_technician_drone_add:0 "$job_tec_shipyard_technician_drone$ Jobs"
- mod_job_tec_shipyard_technician_drone_per_pop:0 "§G+1§! $job_tec_shipyard_technician_drone$ Job Per $VALUE$ Pops"
- mod_job_tec_shipyard_techniciant_drone_per_pop_short:0 "\n§G+1§! £job_tec_shipyard_technician_drone_add£ per $VALUE$ £pop£"
+	job_tec_shipyard_engineer:0 "Shipyard Engineer"
+	job_tec_shipyard_engineer_plural:0 "Shipyard Engineers"
+	job_tec_shipyard_engineer_desc:0 "Very specialized researchers dedicated to design, create and improve new ship and part designs to improve the efficiency of the naval assets of the empire."
+	job_tec_shipyard_engineer_effect_desc:0 "£job_tec_shipyard_engineer£ $job_tec_shipyard_engineer_plural$ uses $tec_loc_alloys$ to generate £engineering£ §YResearch§! and increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
+	mod_job_tec_shipyard_engineer_add:0 "$job_tec_shipyard_engineer$ Jobs"
+	mod_job_tec_shipyard_engineer_per_pop:0 "§G+1§! $job_tec_shipyard_engineer$ Job Per $VALUE$ Pops"
+	mod_job_tec_shipyard_engineer_per_pop_short:0 "\n§G+1§! £job_tec_shipyard_engineer_add£ per $VALUE$ £pop£"
 
- job_tec_shipyard_engineer_drone:0 "Engineer Drone"
- job_tec_shipyard_engineer_drone_plural:0 "Engineer Drones"
- job_tec_shipyard_engineer_drone_desc:0 "Special drones designed to create and design ship parts and variants to increase the performance of the empire navy."
- job_tec_shipyard_engineer_drone_effect_desc:0 "£job_tec_shipyard_engineer_drone£ $job_tec_shipyard_engineer_drone_plural$ uses $tec_loc_alloys$to generate £engineering£ §YResearch§! and increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
- mod_job_tec_shipyard_engineer_drone_add:0 "$job_tec_shipyard_engineer_drone$ Jobs"
- mod_job_tec_shipyard_engineer_drone_per_pop:0 "§G+1§! $job_tec_shipyard_engineer_drone$ Job Per $VALUE$ Pops"
- mod_job_tec_shipyard_engineer_drone_per_pop_short:0 "\n§G+1§! £job_tec_shipyard_engineer_drone_add£ per $VALUE$ £pop£"
+	job_tec_shipyard_technician_drone:0 "Shipyard Drone"
+	job_tec_shipyard_technician_drone_plural:0 "Shipyard Drones"
+	job_tec_shipyard_technician_drone_desc:0 "The specially dedicated drones are tasked to maintain and create sophisticated pieces of ships and habitation modules, boosting the local and total process of ship making, parts repairing and component substitutions."
+	job_tec_shipyard_technician_drone_effect_desc:0 "£job_tec_shipyard_technician_drone£ $job_tec_shipyard_technician_drone_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, slighly increase §YEmpire Shipyard build speed§! and spawn £defense_army£ §YDefense Armies§!."
+	mod_job_tec_shipyard_technician_drone_add:0 "$job_tec_shipyard_technician_drone$ Jobs"
+	mod_job_tec_shipyard_technician_drone_per_pop:0 "§G+1§! $job_tec_shipyard_technician_drone$ Job Per $VALUE$ Pops"
+	mod_job_tec_shipyard_techniciant_drone_per_pop_short:0 "\n§G+1§! £job_tec_shipyard_technician_drone_add£ per $VALUE$ £pop£"
 
- job_tec_telecom_technician:0 "Telecom Officer"
- job_tec_telecom_technician_plural:0 "Telecom Officers"
- job_tec_telecom_technician_desc:0 "A good empire has all comunications ensure for a perfect performance; thats their task, by redirecting all communications, ensuring the orders and edicts are applied at the correct time and managing sub-bureaucratic processes with complex neuro-assistants."
- job_tec_telecom_technician_effect_desc:0 "£job_tec_telecom_technician£ $job_tec_telecom_technician_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, §YPlanet sensor range§!, slighly increase §YEmpire ship speed§! and spawn £defense_army£ §YDefense Armies§!."
- mod_job_tec_telecom_technician_add:0 "$job_tec_telecom_technician$ Jobs"
+	job_tec_shipyard_engineer_drone:0 "Engineer Drone"
+	job_tec_shipyard_engineer_drone_plural:0 "Engineer Drones"
+	job_tec_shipyard_engineer_drone_desc:0 "Special drones designed to create and design ship parts and variants to increase the performance of the empire navy."
+	job_tec_shipyard_engineer_drone_effect_desc:0 "£job_tec_shipyard_engineer_drone£ $job_tec_shipyard_engineer_drone_plural$ uses $tec_loc_alloys$to generate £engineering£ §YResearch§! and increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
+	mod_job_tec_shipyard_engineer_drone_add:0 "$job_tec_shipyard_engineer_drone$ Jobs"
+	mod_job_tec_shipyard_engineer_drone_per_pop:0 "§G+1§! $job_tec_shipyard_engineer_drone$ Job Per $VALUE$ Pops"
+	mod_job_tec_shipyard_engineer_drone_per_pop_short:0 "\n§G+1§! £job_tec_shipyard_engineer_drone_add£ per $VALUE$ £pop£"
 
- job_tec_telecom_technician_drone:0 "Neurocomunicator Drone"
- job_tec_telecom_technician_drone_plural:0 "Neurocomunicator Drones"
- job_tec_telecom_technician_drone_desc:0 "These autonomous drones coordinate with the collective to manage the fleet and logistic orders, serving as a complete embodiment of coordination for any ship maneouver."
- job_tec_telecom_technician_drone_effect_desc:0 "£job_tec_telecom_technician_drone£ $job_tec_telecom_technician_drone_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, §YPlanet sensor range§!, slighly increase §YEmpire ship speed§! and spawn £defense_army£ §YDefense Armies§!."
- mod_job_tec_telecom_technician_drone_add:0 "$job_tec_telecom_technician_drone$ Jobs"
+	job_tec_telecom_technician:0 "Telecom Officer"
+	job_tec_telecom_technician_plural:0 "Telecom Officers"
+	job_tec_telecom_technician_desc:0 "A good empire has all comunications ensure for a perfect performance; thats their task, by redirecting all communications, ensuring the orders and edicts are applied at the correct time and managing sub-bureaucratic processes with complex neuro-assistants."
+	job_tec_telecom_technician_effect_desc:0 "£job_tec_telecom_technician£ $job_tec_telecom_technician_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, §YPlanet sensor range§!, slighly increase §YEmpire ship speed§! and spawn £defense_army£ §YDefense Armies§!."
+	mod_job_tec_telecom_technician_add:0 "$job_tec_telecom_technician$ Jobs"
 
- job_tec_planetdefense_technician:0 "Defense Technician"
- job_tec_planetdefense_technician_plural:0 "Defense Technician"
- job_tec_planetdefense_technician_desc:0 "These soldiers and engineers operate the planet defenses that ensure no enemy ship will land or no enemy attack will penetrate the planet, by preemptive attacks with EMP or disruptor weapons and all kind of artillery."
- job_tec_planetdefense_technician_effect_desc:0 "£job_tec_planetdefense_technician£ $job_tec_planetdefense_technician_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, §YPlanet sensor range§!, slighly increase §YEmpire ship speed§! and spawn £defense_army£ §YDefense Armies§!."
-	mod_job_tec_planetdefense_technician_add:0 "$job_tec_telecom_technician$ Jobs"
+	job_tec_telecom_technician_drone:0 "Neurocomunicator Drone"
+	job_tec_telecom_technician_drone_plural:0 "Neurocomunicator Drones"
+	job_tec_telecom_technician_drone_desc:0 "These autonomous drones coordinate with the collective to manage the fleet and logistic orders, serving as a complete embodiment of coordination for any ship maneouver."
+	job_tec_telecom_technician_drone_effect_desc:0 "£job_tec_telecom_technician_drone£ $job_tec_telecom_technician_drone_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, §YPlanet sensor range§!, slighly increase §YEmpire ship speed§! and spawn £defense_army£ §YDefense Armies§!."
+	mod_job_tec_telecom_technician_drone_add:0 "$job_tec_telecom_technician_drone$ Jobs"
+
+	job_tec_planetdefense_technician:0 "Defense Technician"
+	job_tec_planetdefense_technician_plural:0 "Defense Technician"
+	job_tec_planetdefense_technician_desc:0 "These soldiers and engineers operate the planet defenses that ensure no enemy ship will land or no enemy attack will penetrate the planet, by preemptive attacks with EMP or disruptor weapons and all kind of artillery."
+	job_tec_planetdefense_technician_effect_desc:0 "£job_tec_planetdefense_technician£ $job_tec_planetdefense_technician_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, §YPlanet sensor range§!, slighly increase §YEmpire ship speed§! and spawn £defense_army£ §YDefense Armies§!."
+		mod_job_tec_planetdefense_technician_add:0 "$job_tec_telecom_technician$ Jobs"
 
 # ------------------------------------------------- Basic resources
  building_tec_energrid_1:0 "Energy Plant"
