--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -170,7 +170,7 @@
 	concept_tec_ecumenopolis_default_desc: "Default Ecumenopolis has access to slightly weaker £job_foundry£ §Y$district_arcology_arms_industry$§! and £job_artisan£ §Y$district_arcology_civilian_industry$§! districts compared to specialized variants."
 
 	concept_tec_ecumenopolis_military: "Military Ecumenopolis"
-	concept_tec_ecumenopolis_military_desc: "Military Ecumenopolis has access to £job_foundry£ §Y$district_arcology_arms_industry$§! and £job_soldier£ §Y$district_tec_arcology_army$§! districts, the latter being able to be swapped to £job_tec_cadet£ §Y$district_tec_arcology_navy$§! district through a decision."
+	concept_tec_ecumenopolis_military_desc: "Military Ecumenopolis has access to £job_foundry£ §Y$district_arcology_arms_industry$§! and £job_soldier£ §Y$district_tec_arcology_army$§! districts, the latter being able to be swapped to £job_tec_naval_operator£ §Y$district_tec_arcology_navy$§! district through a decision."
 
 	concept_tec_ecumenopolis_academic: "Academic Ecumenopolis"
 	concept_tec_ecumenopolis_academic_desc: "Academic Ecumenopolis has access to £job_researcher£ §Y$district_tec_arcology_research$§! and £job_chemist£ §Y$district_tec_arcology_refinery$§! districts, the later being able to be specialized further to produce only $tec_loc_volatile_motes$, $tec_loc_exotic_gases$ or $tec_loc_rare_crystals$, but provides more jobs."
