--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -75,12 +75,13 @@
 	tec_loc_trade: "$tec_loc_trade_value$"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ $MOD_POP_GROWTH_SPEED$"
 
+	tec_loc_defense_armies:0 "£defense_army£ Defense Armies"
 
 	tec_loc_building_slots: "$planet_automation_building_slot$"
 
 	tec_loc_edict_funds:0 "£mod_country_edict_fund_add£  $MOD_COUNTRY_EDICT_FUND_ADD$"
 	tec_loc_naval_cap: "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$"
-	tec_loc_navalcap_from_jobs:0 "$mod_pop_job_naval_mult$"
+	tec_loc_navalcap_from_jobs:0 "$mod_pop_job_naval_mult$ from £job£ Jobs"
 	tec_loc_admin_cap: "£mod_country_admin_cap_add£ $MOD_COUNTRY_ADMIN_CAP_ADD$"
 
 	tec_loc_district: "£district£ $DISTRICT$"
