leader nerfs + assimilation fail rates

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -613,7 +613,7 @@
 
 	civic_dystopian_society:1 "§L£tec_civic_feature£§!Dystopian Society"
 	civic_dystopian_society_desc:1 "['concept_tec_feature_civic']\n['concept_tec_living_standard_civic']\n\nOnly the elite of the elite deserve the best of the best. Everyone else is expected to provide for the ruling class and their lackeys."
-	civic_dystopian_society_tooltip:1 "§HForced Living Standard:§! £pop£ §Y$living_standard_dystopian_society$§!\nUnder such living standard:\n- §YNon-Ruler§! Jobs have decreased $r_consumer_goods$ Upkeep, no §Y$tec_loc_amenities$§! usage and generate §R1§! additional £crime£ §Y$PLANET_CRIME_TITLE$§!\n- §YRulers§! and §Y£job_enforcer£ Anti-Crime§! jobs don't produce base §Y$tec_loc_amenities$§! and consume extra §Y$tec_loc_amenities$§!.\n\n§HRestriction:§! Forbids £building£ §Y$building_holo_theatres$§!"
+	civic_dystopian_society_tooltip:1 "§HForced Living Standard:§! £pop£ §Y$living_standard_dystopian_society$§!\nUnder such living standard:\n- §YNon-Ruler§! Jobs have decreased $r_consumer_goods$ Upkeep, no §Y$tec_loc_amenities$§! usage and generate §R1§! additional £crime£ §Y$PLANET_CRIME_TITLE$§!\n- §YRulers§! and §Y£job_enforcer£ Anti-Crime§! jobs don't produce base §Y$tec_loc_amenities$§! and consume extra §Y$tec_loc_amenities$§!.\n\n§HRestriction:§! Forbids £building£ §Y$building_holo_theatres$§!\nSimilar £building£ Buildings are either restricted or have reduced $tec_loc_amenities$ production.\n\n"
  # /
  # Evolved
 	# former civic_defenders_faith
