--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -244,6 +244,7 @@
 # MISC replaces
 # ------------------------------------------------------------
  MOD_COUNTRY_ADMIN_CAP_ADD:1 "Additional Base Empire Size"
+ BUILDING_FTL_INHIBITOR:0 "§Y$trigger_tec_warning$Provides FTL Inhibitor§!"
 
 # Flooded Worlds
 
