--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -4,7 +4,18 @@
 	COUNCIL_POSITION_FROM_CIVIC:0 "§ECouncilor: £council£ $NAME|H$§!"
 	COUNCIL_POSITION_AVAILABLE_FOR_CLASS:0 "$CLASS$  "
 	COUNCIL_POSITION_AVAILABLE_FOR:1 "\n§EClass§!: "
-#
+# /
+
+# Leader overwrites
+	leader_trait_spark_of_genius_1_tooltip:0 "£empire£ §YEmpire§! §EEffects As§! §YRuler§! or §YHead Researcher§!:\n    Research Speed: §G+5%§!\n\n£empire£ §YEmpire§! §EEffects As§! §YCouncilor§!:\n    $tec_loc_research_resources$ per Skill: §G+0.5§!"
+	leader_trait_spark_of_genius_2_tooltip:0 "£empire£ §YEmpire§! §EEffects As§! §YRuler§! or §YHead Researcher§!:\n    Research Speed: §G+10%§!\n\n£empire£ §YEmpire§! §EEffects As§! §YCouncilor§!:\n    $tec_loc_research_resources$ per Skill: §G+1§!"
+
+	trait_ruler_corvette_focus_tooltip:0 "£empire£ §YEmpire§! §EEffects As§! §YRuler§!:\n    $mod_ship_corvette_cost_mult$: §G-15%§!\n    $mod_shipsize_corvette_hull_mult$: §G+15%§!\n\n£empire£ §YEmpire§! §EEffects As§! §YCouncilor§!:\n    $mod_shipsize_corvette_hull_mult$: §G+15%§!"
+	trait_ruler_destroyer_focus_tooltip:0 "£empire£ §YEmpire§! §EEffects As§! §YRuler§!:\n    $mod_ship_destroyer_cost_mult$: §G-15%§!\n    $mod_shipsize_destroyer_hull_mult$: §G+15%§!\n\n£empire£ §YEmpire§! §EEffects As§! §YCouncilor§!:\n    $mod_shipsize_destroyer_hull_mult$: §G+15%§!"
+	trait_ruler_cruiser_focus_tooltip:0 "£empire£ §YEmpire§! §EEffects As§! §YRuler§!:\n    $mod_ship_cruiser_cost_mult$: §G-15%§!\n    $mod_shipsize_cruiser_hull_mult$: §G+15%§!\n\n£empire£ §YEmpire§! §EEffects As§! §YCouncilor§!:\n    $mod_shipsize_cruiser_hull_mult$: §G+15%§!"
+	trait_ruler_battleship_focus_tooltip:0 "£empire£ §YEmpire§! §EEffects As§! §YRuler§!:\n    $mod_ship_battleship_cost_mult$: §G-15%§!\n    $mod_shipsize_battleship_hull_mult$: §G+15%§!\n\n£empire£ §YEmpire§! §EEffects As§! §YCouncilor§!:\n    $mod_shipsize_battleship_hull_mult$: §G+15%§!"
+
+# /
 
 # Vanilla loc overwrites
 	councilor_anglers_custom_modifier_desc:0 "$tec_loc_food$ from £job_angler£ $job_angler_plural$: §G+$@councilor_anglers_angler_food_bonus$§!\n$tec_loc_consumer_goods$ from £job_pearl_diver£ $job_pearl_diver_plural$: §G+$@councilor_anglers_pearl_diver_consumer_goods_bonus$§!"
