researcher trait changes removed

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -971,11 +971,19 @@
 
 		civic_tec_regular_researchers_illicit:0 "§P£tec_civic_job£§!Illicit Innovation" 
 		civic_tec_regular_researchers_illicit_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nPraxis and morale should not be barriers for development, and as such the majority of the conducted research on this society is done via more than questionable methods; abductions, collateral effects or tests on the population itself are the norm and generally overlooked by authorities, as technological progress advances relentlessly."
-		civic_tec_regular_researchers_illicit_tooltip:0 "§HUnlocks Feature:§! £building£ §Y$building_tec_illicit_lab_1_plural$§!\n£building£ §Y$building_tec_illicit_lab_1_plural$§! replace £building£ §Y$building_research_lab_plural$§!\n\n§HReplaces Job:§! £job_researcher£ §Y$job_researcher_plural$§! with £job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§!\n£job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§ use §Y$PLANET_CRIME_TITLE$§! instead of §Y$tec_loc_cg$§!, and produce more $tec_loc_research$ the higher the $PLANET_CRIME_TITLE$ on the planet.\n\n§HUnlocks Feature:§! £building£ §Y$building_tec_experimentation_lair$§!\n\nOn planets with a £building£ §Y$building_tec_experimentation_lair$§! several experiments will take place, making £job_tec_unwilling_subject£ §Y$job_tec_unwilling_subject_plural$§!, obtained of the population, to §Yproduce§! or §Ysuffer§! several outcomes based on the £system£ §HEmpire decisions§! through the game."
+		civic_tec_regular_researchers_illicit_tooltip:0 "§HUnlocks Feature:§! £building£ §Y$building_tec_illicit_lab_1_plural$§!\n£building£ §Y$building_tec_illicit_lab_1_plural$§! replace £building£ §Y$building_research_lab_plural$§!\n\n§HReplaces Job:§! £job_researcher£ §Y$job_researcher_plural$§! with £job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§!\n£job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§ use §Y$PLANET_CRIME_TITLE$§! instead of §Y$tec_loc_cg$§!, and produce more $tec_loc_research_resources$ the higher the $PLANET_CRIME_TITLE$ on the planet.\n\n§HUnlocks Feature:§! £building£ §Y$building_tec_experimentation_lair$§!\n\nOn planets with a £building£ §Y$building_tec_experimentation_lair$§! several experiments will take place, making £job_tec_unwilling_subject£ §Y$job_tec_unwilling_subject_plural$§!, obtained of the population, to §Yproduce§! or §Ysuffer§! several outcomes based on the £system£ §HEmpire decisions§! through the game."
+		councilor_civic_tec_regular_researchers_illicit:0 "Mastermind"
+		councilor_civic_tec_regular_researchers_illicit_female:0 "$councilor_civic_tec_regular_researchers$"
+		councilor_civic_tec_regular_researchers_illicit_desc:0 "The $TITLE$ oversees the development of morally questionable technologies on secret research lairs."
+		councilor_civic_tec_regular_researchers_illicit_custom_modifier:0 "TO DO"
 
 			civic_tec_corporate_researchers_illicit:0 "§P£tec_civic_job£§!Illicit Experimentation" 
 			civic_tec_corporate_researchers_illicit_desc:0 "['concept_tec_job_alteration_civic']\n['concept_tec_research_swap_civic']\n\nSeveral undercover research agencies are hired by this corporation to conduct research experiments for the profitable advancement of the empire; while it is, surely, done via more than questionable methods, the economical and technological progress report immense growth values."
 			civic_tec_corporate_researchers_illicit_tooltip:0 "§HUnlocks Feature:§! £building£ §Y$building_tec_illicit_lab_1_plural$§!\n£building£ §Y$building_tec_illicit_lab_1_plural$§! replace £building£ §Y$building_research_lab_plural$§!\n\n§HReplaces Job:§! £job_researcher£ §Y$job_researcher_plural$§! with £job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§!\n£job_tec_illicit_researcher£ §Y$job_tec_illicit_researcher_plural$§ use §Y$PLANET_CRIME_TITLE$§! instead of §Y$tec_loc_cg$§!, and produce more $tec_loc_trade$ the higher the $PLANET_CRIME_TITLE$ on the planet.\n\n§HUnlocks Feature:§! £building£ §Y$building_tec_experimentation_lair$§!\n\nOn planets with a £building£ §Y$building_tec_experimentation_lair$§! several experiments will take place, making £job_tec_unwilling_subject£ §Y$job_tec_unwilling_subject_plural$§!, obtained of the population, to §Yproduce§! or §Ysuffer§! several outcomes based on the £system£ §HEmpire decisions§! through the game."
+			councilor_civic_tec_corporate_researchers_illicit:0 "Taskmaster"
+			councilor_civic_tec_corporate_researchers_illicit_female:0 "$councilor_civic_tec_corporate_researchers_illicit$"
+			councilor_civic_tec_corporate_researchers_illicit_desc:0 "The $TITLE$ ensures the profit of morally questionable technologies is on the top notch of benefits."
+			councilor_civic_tec_corporate_researchers_illicit_custom_modifier:0 "TO DO"
 
 	# /
 	# Research specific focus
@@ -1007,23 +1015,51 @@
 		civic_tec_corporate_researchers_syngularity:0 "TO DO"
 		civic_tec_corporate_researchers_syngularity_desc:0 "TO DO"
 	# /
+
+	# Bureaucratic half swap
+
+	# /
+	# Bureaucratic swap
+		# They put something in the water!
+		civic_tec_regular_bureaucratic_crime:0 "§P£tec_civic_job£§!TO DO"	#NOT DONE
+		civic_tec_regular_bureaucratic_crime_desc:0 "['concept_tec_feature_civic']\n\nto do"
+		civic_tec_regular_bureaucratic_crime_tooltip:1 "§HUnlocks Feature:§! £building£ §Y$building_tec_illicit_administration_1_plural$§!\n£building£ §Y$building_tec_illicit_administration_1_plural$§! replace £building£ §Y$building_bureaucratic_1_plural$§!\n\n§HReplaces Job:§! £job_bureaucrat£ §Y$job_bureaucrat_plural$§! with £job_tec_illicit_bureaucrat£ §Y$job_tec_illicit_bureaucrat_plural$§!\n£job_tec_illicit_researcher£ §Y$job_tec_illicit_bureaucrat_plural$§ produce more $tec_loc_unity$ the higher the $PLANET_CRIME_TITLE$ on the planet.\n\nTO DO"
+	# /
+
 	# Priest half swap
 
 	# /
 	# Priest full swap
 
 	# /
+
 	# Enforcers half swap
+		civic_tec_regular_enforcers_omniguard:0 "§P£tec_civic_job£§!Omni-Centinels"	#NOT DONE
+		civic_tec_regular_enforcers_omniguard_desc:0 "['concept_tec_feature_civic']\n\nMass-produced robotic guards conform the vigilancy and safety body of this Corporation."
+		civic_tec_regular_enforcers_omniguard_tooltip:1 "TO DO"
 
 	# /
 	# Enforcers full swap
+		civic_tec_regular_enforcers_automation:0 "§P£tec_civic_job£§!Insured Pacificators"	#NOT DONE
+		civic_tec_regular_enforcers_automation_desc:0 "['concept_tec_feature_civic']\n\nThis Megacorp assembles and operates a highly efficient (and not held back by moral) army of mechanized automated Police Forces, enforcing the law as it is written without leniency or mercy, backed by a strong insurance policy and diverse alarm and protection systems.\n\n§HCasual ''collateral damage'' or ''punctual exemptions on verified individuals'' are contemplated as clauses in the contract.§!"
+		civic_tec_regular_enforcers_automation_tooltip:1 "§HUnlocks Building:§! £building£ §Y$building_tec_anticrime_pacification_site_1$§!\n£building£ §Y$building_tec_anticrime_pacification_site_1_plural$§! replace £building£ §Y$building_precinct_house_plural$§!, reducing §Y$tec_loc_crime$§! automatically in exchange of a big amount of §Y$tec_loc_amenities$§!.\n\n£building£ §Y$building_tec_anticrime_pacification_site_1_plural$§! inherit £job_enforcer£ §Y$job_enforcer_plural$§! additional modifiers.\n\n§HUnlocks Holding:§! £building£ §Y$holding_tec_anticrime_pacification_site$§!\n£building£ §Y$holding_tec_anticrime_pacification_site_plural$§! bring the effects of §Y$building_tec_anticrime_pacification_site_1_plural$§! to vassals.\n\n§HDetection Bonus:§!$tec_loc_civic_increases_technological_detection$\n\n"
 
+		civic_tec_regular_enforcers_precognition:0 "§P£tec_civic_job£§!Precog Surveyors"	#NOT DONE
+		civic_tec_regular_enforcers_precognition_desc:0 "['concept_tec_feature_civic']\n\nStopping a crime before it even happens, provide generous policities of insurance to folster prevention, etc - All ensured by a corps of precognitive police, using theorical calculation and pseudo-psychic abilities to detect and stop any crime before it happens."
+		civic_tec_regular_enforcers_automation_tooltip:1 "§HUnlocks Building:§! £building£ §Y$building_tec_anticrime_precognition_site_1$§!\n£building£ §Y$building_tec_anticrime_precognition_site_1_plural$§! replace £building£ §Y$building_precinct_house_plural$§!, providing £job_tec_precog_enforcer£ §Y$job_tec_precog_enforcer$§!\n$job_tec_precog_enforcer_effect_desc$\n\n§HUnlocks Holding:§! £building£ §Y$holding_tec_anticrime_precognition_site$§!\n£building£ §Y$holding_tec_anticrime_precognition_site_plural$§! bring the effects of §Y$building_tec_anticrime_precognition_site_1_plural$§! to vassals.\n\n§HDetection Bonus:§!$tec_loc_civic_increases_overall_detection$\n\n"
 	# /
 
 	# Soldiers half swap
 
 	# /
 	# Soldiers swap
+		civic_tec_corporate_soldier_mechs:0 "§P£tec_civic_job£§!Naval Simulations"	#NOT DONE
+		civic_tec_corporate_soldier_mechs_desc:0 "['concept_tec_feature_civic']\n\nTOP DO."
+		civic_tec_corporate_soldier_mechs_tooltip:1 "§HUnlocks Feature:§! TO DO\n\n"
+
+		civic_tec_corporate_naval_simulations:0 "§P£tec_civic_job£§!Naval Simulations"	#NOT DONE
+		civic_tec_corporate_naval_simulations_desc:0 "['concept_tec_feature_civic']\n\nMost of the naval operations of this corporation are done remotely by several group of experienced emulators and digital pilots, ''playing'' tactical games emulating naval movements and applying those tactics remotely on service, acting not only as a clear military advantage due to reduction of risked personnel, but also a source of profitable public spectacle used for entertainment of the population."
+		civic_tec_corporate_naval_simulations_tooltip:1 "§HUnlocks Feature:§! £building£ §Y$building_tec_naval_relay_1_plural$§!\n£building£ §Y$building_tec_naval_relay_1_plural$§! replace £building£ §Y$building_tec_naval_academy$§! and £building£ §Y$building_holo_theaters$§! and provide £job_tec_emulator_pilot£ §Y$job_tec_emulator_pilot_plural$§!\n\n$job_tec_emulator_pilot_effect_desc$\n\nA\n\n"
 		
 	# /
 
