more work on tech weights modularization

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3591,7 +3591,9 @@ mod_tec_worker_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_
 mod_tec_slave_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_pop_category_slave$"
 mod_tec_pop_lifestyle_trade_value_add: "$tec_loc_trade_value$ from £pop£ Pops"
 mod_tec_planet_automation_mult: "£trigger_tec_automation£ Automated Production Output"
-mod_tec_tech_rare_draw_chance_mult: "Chance for §MRare§! Options"
+mod_tec_tech_rare_draw_chance_mult: "Chance for §MRare§! Research Options"
+mod_tec_tech_blocks_neighbour_spread: "Blocks Technology Spread to §YNeighbour§! £empire£ Empires"
+mod_tec_tech_neighbour_draw_chance_mult: "Chance for §YNeighbour§! Technology Research Options"
 
 # Assembly Localization
 
