--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -156,6 +156,8 @@
 	tec_loc_councilor_traits: "£council£ Councilor Traits"
 	tec_loc_normal_traits: "£noclass£ Normal Traits"
 
+	tec_trait_bonuses_scale_with_skill: "§YTrait bonuses scale with §HLeader Skill§!"
+
 # --------------------------- MACHINE COMPUTING POWER --------------------------------
 	TEC_PROCESSCAP_WINDOW_TITLE: "Processing Capacity"
 	TEC_PROCESSCAP_WINDOW_DESC: "Administers the empire §YProcessing Capacity§!."
